--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/jest": "^23.1.1",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "@types/node": "^10.3.5",
+    "codelyzer": "~4.4.0",
     "jest": "^23.1.0",
     "jest-preset-angular": "^5.2.2",
     "protractor": "~5.3.0",
     "ts-jest": "^22.4.6",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "ts-node": "~7.0.0",
+    "tslint": "~5.10.0",
+    "typescript": "~2.9.2"
   }
 }
