A bit eager on using latest versions

--- a/package.json
+++ b/package.json
@@ -46,6 +46,6 @@
     "ts-jest": "^22.4.6",
     "ts-node": "~7.0.0",
     "tslint": "~5.10.0",
-    "typescript": "~2.9.2"
+    "typescript": ">=2.7.0 <2.8.0"
   }
 }
